--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,1 +1,14 @@
+name: CI/CD 
+
+on: 
+  push:
+    branches:
+      - main
+
+jobs: 
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code 
+        uses: actions/checkout@v2
 
