test whether deploying to ec2 works

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -6,9 +6,28 @@ on:
       - main
 
 jobs: 
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code 
         uses: actions/checkout@v2
+    deploy:
+      needs: build
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v2
+        - name: Deploy in EC2
+          env:
+              PRIVATE_KEY: ${{  secrets.AWS_PRIVATE_KEY  }}
+              HOSTNAME: ${{ secrets.HOSTNAME  }}
+              USER_NAME: ${{ secrets.USERNAME  }}
+          run: |
+              echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+              ssh -i private_key ${USERNAME}@${HOSTNAME}
+              '
+              #Executed in EC2
+              wall Hello World
+              '
+
 
