--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -23,7 +23,7 @@ jobs:
             USER_NAME: ${{ secrets.USERNAME  }}
         run: |
               echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-              ssh -i private_key ${USERNAME}@${HOSTNAME}
+              ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME}
               '
               #Executed in EC2
               wall Hello World
