--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -20,7 +20,7 @@ jobs:
         env:
             PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             HOSTNAME: ${{ secrets.HOSTNAME }}
-            USER_NAME: ${{ secrets.USERNAME  }}
+            USERNAME: ${{ secrets.USERNAME  }}
         run: |
               echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
               ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME}
