--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -17,6 +17,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Deploy in EC2
+      - name: Setup SSH keys
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan "${{ secrets.HOSTNAME }}" >> ~/.ssh/known_hosts
         env:
             PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             HOSTNAME: ${{ secrets.HOSTNAME }}
