--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,23 +18,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup SSH keys
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan "${{ secrets.HOSTNAME }}" >> ~/.ssh/known_hosts
-
-        env:
-            PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-            HOSTNAME: ${{ secrets.HOSTNAME }}
-            USERNAME: ${{ secrets.USERNAME  }}
-        run: |
-              echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-              ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME}
-              '
-              #Executed in EC2
-              wall Hello World
-              '
-
+      - name: test
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+                      wall test
 
