--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,12 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: test
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTNAME }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: |
-                      wall test
+       - name: Setup SSH keys
+         run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+
 
