--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -23,6 +23,6 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+          ssh-keyscan "${{ secrets.HOSTNAME }}" >> ~/.ssh/known_hosts
 
 
