--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,11 +18,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup SSH keys
+      - name: setup ssh configuration
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan "${{ secrets.HOSTNAME }}" >> ~/.ssh/known_hosts
+
+      - name: transfer app to ec2 instance
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            wall Hello World
+
+
+
 
 
