--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -32,8 +32,22 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            mkdir ~/amg_dash
+            mkdir -p ~/amg_dash
             git clone https://github.com/Luurit00/amg_dash.git
+      
+      - name: get the stock data
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            cd ~/amg_dash
+            mkdir ./data
+            cd ./data
+            wget https://raw.githubusercontent.com/plotly/datasets/master/stockdata2.csv
+
+
 
 
 
