--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -54,12 +54,21 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
+            cd ~
             sudo snap refresh
             sudo snap install docker
             sudo service docker start
             sudo docker info
-
-            
+      
+      - name: cleanup all running containers and images
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            sudo docker kill $(docker ps -a -q)
+            sudo docker rmi -f $(docker images -a -q)
 
 
 
