--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -67,8 +67,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            sudo docker kill $(docker ps -a -q)
-            sudo docker rmi -f $(docker images -a -q)
+            sudo docker kill $(sudo docker ps -a -q)
+            sudo docker rmi -f $(sudo docker images -a -q)
 
 
 
