--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -80,7 +80,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             cd ~/amg_dash
-            docker build -t amg_dash:latest
+            docker build -t amg_dash:latest .
             
       
       - name: cleanup all running containers and images
