--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -81,8 +81,17 @@ jobs:
           script: |
             cd ~/amg_dash
             sudo docker build -t amg_dash:latest .
+
+      - name: run the application and expose port 8080
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAME }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            sudo docker run -d -p 8080:5050 amg_dash
+
             
-      
       - name: cleanup all running containers and images
         uses: appleboy/ssh-action@master
         with:
