--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -19,8 +19,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: install requirements
         run: |
-          pyenv install
-          pyenv shell
+          pipenv install
+          pipenv shell
       - name: test the code
         run: |
           pytest
