--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,12 +18,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: install requirements
-        run: |
-          pipenv install
-          pipenv shell
+        uses: VaultVulp/action-pipenv@v2.0.1
+        with:
+          command: install -d
       - name: test the code
-        run: |
-          pytest
+        uses: VaultVulp/action-pipenv@v2.0.1
+        with:
+          command: run test
 
   deploy:
     needs: build
