--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,9 +22,8 @@ jobs:
         with:
           command: install -d
       - name: test the code
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: pipenv run pytest
+        run:
+          pipenv run pytest
 
   deploy:
     needs: build
