--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -45,7 +45,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            mkdir -p ~/amg_dash
             git clone https://github.com/Luurit00/amg_dash.git
       
       - name: get the stock data
@@ -68,23 +67,14 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             cd ~
-            sudo snap refresh
-            sudo snap install docker
-            sudo service docker start
-            sudo docker info
-
-      - name: test the application
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTNAME }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          script: |
-            cd ~/amg_dash
-            sudo pipenv install
-            sudo pipenv shell
-            python3 -m pytest tests/test.py
-
+            if command -v docker &>/dev/null; then
+              echo "Docker is already installed"
+            else
+              sudo snap refresh
+              sudo snap install docker
+              sudo service docker start
+              sudo docker info
+            fi
 
       - name: build the application with docker
         uses: appleboy/ssh-action@master
@@ -104,7 +94,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             sudo docker run -d -p 8080:5050 amg_dash:latest
-
+            sleep 200
             
       - name: cleanup all directories, running containers and images
         uses: appleboy/ssh-action@master
