--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -44,6 +44,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
+            mkdir ~/amg_dash
             git clone https://github.com/Luurit00/amg_dash.git
       
       - name: get the stock data
