--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -95,6 +95,12 @@ jobs:
           script: |
             sudo docker run -d -p 8080:5050 amg_dash:latest
             sleep 200
+      
+      - name: perform a healthcheck on the runnig application
+        run: |
+          curl http://${{ secrets.HOSTNAME }}
+        
+
             
       - name: cleanup all directories, running containers and images
         uses: appleboy/ssh-action@master
