--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -101,7 +101,7 @@ jobs:
         run: |
           END_TIME=$((SECONDS + 60))  # 1 minute from now
           while [ $SECONDS -lt $END_TIME ]; do
-            curl -s http://$"HOSTNAME":8080
+            curl -s http://$HOSTNAME:8080
             sleep 5
           done
         
