--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -100,7 +100,7 @@ jobs:
           HOSTNAME: ${{ secrets.HOSTNAME }}
         uses: jtalk/url-health-check-action@v3
         with:
-          url: https://${{ HOSTNAME  }}:8080
+          url: https://${{ env.HOSTNAME }}:8080
           follow-redirect: false 
           max-attempts: 3
           retry-delay: 5s
